--- a/dev.html
+++ b/dev.html
@@ -95,8 +95,11 @@ button{
   }
 
   #playPanel{
-    display:grid;
-    place-items:center;
+    display:flex;
+    justify-content:center;
+    align-items:flex-start;
+    width:100%;
+    box-sizing:border-box;
     padding:6px;
     padding-left: calc(6px + env(safe-area-inset-left));
     padding-right: calc(6px + env(safe-area-inset-right));
@@ -106,6 +109,7 @@ button{
   #game{
     touch-action: none;
     position:relative;
+    margin:0 auto;
     width:min(900px, 96vw);
     height:min(600px, calc(var(--vvh) - var(--headerH) - var(--vb) - 12px));
     background: radial-gradient(900px 650px at 50% 35%, var(--gameA), var(--gameB));
