--- a/dev.html
+++ b/dev.html
@@ -684,7 +684,7 @@ body.bestFlash::before{
 </div>
 </div>
 </div></div><div id="statusWrap">
-<div id="status">Press Play once. Then it runs continuously.</div>
+<div id="status"></div>
 </div><div id="rightGroup"><button id="panelBtn" title="Show/hide the control panel">Panel</button><button id="closeBtn" title="End / show final score">✕</button></div></div>
 </header>
 <div id="playPanel">
