--- a/dev.html
+++ b/dev.html
@@ -874,7 +874,8 @@ body.bestFlash::before{
   const timeLeftEl  = document.getElementById("timeLeftOverlay");
   const addTimeBtn  = document.getElementById("addTimeOverlayBtn");
   const STORAGE_PLAY = "smt_total_plays";
-    const DEFAULT_MINUTES = 5; // initial allowed minutes
+    const STORAGE_BEST = "smt_best_n";
+const DEFAULT_MINUTES = 5; // initial allowed minutes
   const ADD_MINUTES = 5;
     const PAYPAL_URL = "https://www.paypal.me/ConstantinosRagazas";      // per "Add Time" press
   let totalPlays = 0;
